--- a/03_Front/geminiTest.html
+++ b/03_Front/geminiTest.html
@@ -3,114 +3,145 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gemini Shop</title>
+    <title>melo Chat</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Noto Sans KR', sans-serif;
             margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+            background-color: #f0f4f9;
         }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 1rem 0;
-            text-align: center;
+        .chat-container {
+            flex: 1;
+            overflow-y: auto;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
         }
-        nav {
+        .message {
+            padding: 12px 18px;
+            border-radius: 20px;
+            max-width: 75%;
+            line-height: 1.6;
+            font-size: 16px;
+        }
+        .user-message {
+            background-color: #dcf8c6;
+            align-self: flex-end;
+        }
+        .bot-message {
+            background-color: #ffffff;
+            align-self: flex-start;
+            border: 1px solid #e0e0e0;
+        }
+        .input-wrapper {
+            padding: 15px 20px;
+            background-color: #ffffff;
+            border-top: 1px solid #d1d5db;
+        }
+        .input-container {
+            display: flex;
+            align-items: center;
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: #f0f4f9;
+            border-radius: 25px;
+            padding: 5px 15px;
+        }
+        #chat-input {
+            flex: 1;
+            border: none;
+            outline: none;
+            padding: 10px;
+            background-color: transparent;
+            font-size: 16px;
+        }
+        #send-button {
+            border: none;
+            background-color: #1a73e8;
+            color: white;
+            width: 36px;
+            height: 36px;
+            border-radius: 50%;
+            cursor: pointer;
+            font-size: 18px;
             display: flex;
             justify-content: center;
-            background-color: #444;
+            align-items: center;
         }
-        nav a {
-            color: #fff;
-            padding: 1rem;
-            text-decoration: none;
-            text-transform: uppercase;
-        }
-        nav a:hover {
-            background-color: #555;
-        }
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-        }
-        #products {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 1rem;
-            padding: 2rem 0;
-        }
-        .product {
-            background: #fff;
-            border: 1px solid #ddd;
-            padding: 1rem;
-            text-align: center;
-        }
-        .product img {
-            max-width: 100%;
-            height: auto;
-        }
-        .product h3 {
-            font-size: 1.2rem;
-        }
-        .price {
-            color: #e44d26;
-            font-weight: bold;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1rem 0;
-            position: relative;
-            bottom: 0;
-            width: 100%;
+        #send-button:hover {
+            background-color: #155ab6;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Gemini Shop</h1>
-    </header>
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">상의</a>
-        <a href="#">하의</a>
-        <a href="#">액세서리</a>
-        <a href="#">고객센터</a>
-    </nav>
-    <div class="container">
-        <section id="products">
-            <div class="product">
-                <img src="https://via.placeholder.com/250" alt="상품 이미지">
-                <h3>상품 1</h3>
-                <p class="price">₩50,000</p>
-                <button>장바구니에 담기</button>
-            </div>
-            <div class="product">
-                <img src="https://via.placeholder.com/250" alt="상품 이미지">
-                <h3>상품 2</h3>
-                <p class="price">₩75,000</p>
-                <button>장바구니에 담기</button>
-            </div>
-            <div class="product">
-                <img src="https://via.placeholder.com/250" alt="상품 이미지">
-                <h3>상품 3</h3>
-                <p class="price">₩30,000</p>
-                <button>장바구니에 담기</button>
-            </div>
-            <div class="product">
-                <img src="https://via.placeholder.com/250" alt="상품 이미지">
-                <h3>상품 4</h3>
-                <p class="price">₩120,000</p>
-                <button>장바구니에 담기</button>
-            </div>
-        </section>
+
+    <div class="chat-container" id="chat-container">
+        <div class="message bot-message">
+            안녕하세요! 무엇을 도와드릴까요?
+        </div>
     </div>
-    <footer>
-        <p>&copy; 2025 Gemini Shop. All Rights Reserved.</p>
-    </footer>
+
+    <div class="input-wrapper">
+        <div class="input-container">
+            <input type="text" id="chat-input" placeholder="메시지를 입력하세요...">
+            <button id="send-button">&#10148;</button>
+        </div>
+    </div>
+
+    <script>
+        const chatContainer = document.getElementById('chat-container');
+        const chatInput = document.getElementById('chat-input');
+        const sendButton = document.getElementById('send-button');
+
+        function addMessage(message, sender) {
+            const messageElement = document.createElement('div');
+            messageElement.classList.add('message');
+            messageElement.classList.add(sender === 'user' ? 'user-message' : 'bot-message');
+            messageElement.textContent = message;
+            chatContainer.appendChild(messageElement);
+            chatContainer.scrollTop = chatContainer.scrollHeight;
+        }
+
+        async function handleSendMessage() {
+            const messageText = chatInput.value.trim();
+            if (!messageText) return;
+
+            addMessage(messageText, 'user');
+            chatInput.value = '';
+
+            try {
+                const response = await fetch('http://localhost:5000/chat', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ message: messageText }),
+                });
+
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
+                }
+
+                const data = await response.json();
+                addMessage(data.reply, 'bot');
+
+            } catch (error) {
+                console.error('Fetch Error:', error);
+                addMessage('서버와 통신 중 오류가 발생했습니다. Python 서버가 실행 중인지 확인해주세요.', 'bot');
+            }
+        }
+
+        sendButton.addEventListener('click', handleSendMessage);
+        chatInput.addEventListener('keypress', (e) => {
+            if (e.key === 'Enter') {
+                handleSendMessage();
+            }
+        });
+    </script>
+
 </body>
 </html>
