--- a/03_Front/geminiTest.html
+++ b/03_Front/geminiTest.html
@@ -3,145 +3,121 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>melo Chat</title>
+    <title>Gemini University</title>
     <style>
         body {
-            font-family: 'Noto Sans KR', sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-            background-color: #f0f4f9;
+            color: #333;
         }
-        .chat-container {
-            flex: 1;
-            overflow-y: auto;
+        .header {
+            background-color: #003366;
+            color: white;
             padding: 20px;
             display: flex;
-            flex-direction: column;
-            gap: 15px;
-        }
-        .message {
-            padding: 12px 18px;
-            border-radius: 20px;
-            max-width: 75%;
-            line-height: 1.6;
-            font-size: 16px;
-        }
-        .user-message {
-            background-color: #dcf8c6;
-            align-self: flex-end;
-        }
-        .bot-message {
-            background-color: #ffffff;
-            align-self: flex-start;
-            border: 1px solid #e0e0e0;
-        }
-        .input-wrapper {
-            padding: 15px 20px;
-            background-color: #ffffff;
-            border-top: 1px solid #d1d5db;
-        }
-        .input-container {
-            display: flex;
+            justify-content: space-between;
             align-items: center;
-            max-width: 800px;
-            margin: 0 auto;
-            background-color: #f0f4f9;
-            border-radius: 25px;
-            padding: 5px 15px;
         }
-        #chat-input {
-            flex: 1;
-            border: none;
-            outline: none;
-            padding: 10px;
-            background-color: transparent;
-            font-size: 16px;
+        .header h1 {
+            margin: 0;
+            font-size: 2em;
         }
-        #send-button {
-            border: none;
-            background-color: #1a73e8;
+        .nav a {
             color: white;
-            width: 36px;
-            height: 36px;
-            border-radius: 50%;
-            cursor: pointer;
-            font-size: 18px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            text-decoration: none;
+            margin: 0 15px;
+            font-size: 1.1em;
         }
-        #send-button:hover {
-            background-color: #155ab6;
+        .hero {
+            background-image: url('https://via.placeholder.com/1500x500');
+            background-size: cover;
+            background-position: center;
+            color: white;
+            text-align: center;
+            padding: 100px 20px;
+        }
+        .hero h2 {
+            font-size: 3em;
+            margin: 0;
+        }
+        .hero p {
+            font-size: 1.5em;
+        }
+        .main-content {
+            padding: 20px;
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+        }
+        .section {
+            width: 30%;
+            min-width: 280px;
+            margin-bottom: 20px;
+        }
+        .section h3 {
+            color: #003366;
+            border-bottom: 2px solid #003366;
+            padding-bottom: 10px;
+        }
+        .footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 20px;
+            position: relative;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
 <body>
 
-    <div class="chat-container" id="chat-container">
-        <div class="message bot-message">
-            안녕하세요! 무엇을 도와드릴까요?
+    <header class="header">
+        <h1>Gemini University</h1>
+        <nav class="nav">
+            <a href="#">About</a>
+            <a href="#">Admissions</a>
+            <a href="#">Academics</a>
+            <a href="#">Research</a>
+            <a href="#">Campus Life</a>
+        </nav>
+    </header>
+
+    <section class="hero">
+        <h2>Welcome to Gemini University</h2>
+        <p>Excellence in Education and Research</p>
+    </section>
+
+    <main class="main-content">
+        <div class="section">
+            <h3>Latest News</h3>
+            <ul>
+                <li><a href="#">Annual Tech Fest 2025</a></li>
+                <li><a href="#">New Research Center Opening</a></li>
+                <li><a href="#">Scholarship Announcements</a></li>
+            </ul>
         </div>
-    </div>
-
-    <div class="input-wrapper">
-        <div class="input-container">
-            <input type="text" id="chat-input" placeholder="메시지를 입력하세요...">
-            <button id="send-button">&#10148;</button>
+        <div class="section">
+            <h3>Upcoming Events</h3>
+            <ul>
+                <li>Sept 15: Orientation Day</li>
+                <li>Oct 10: Mid-term Exams</li>
+                <li>Nov 05: University Gala</li>
+            </ul>
         </div>
-    </div>
+        <div class="section">
+            <h3>Academics</h3>
+            <ul>
+                <li><a href="#">Undergraduate Programs</a></li>
+                <li><a href="#">Graduate Programs</a></li>
+                <li><a href="#">Online Courses</a></li>
+            </ul>
+        </div>
+    </main>
 
-    <script>
-        const chatContainer = document.getElementById('chat-container');
-        const chatInput = document.getElementById('chat-input');
-        const sendButton = document.getElementById('send-button');
-
-        function addMessage(message, sender) {
-            const messageElement = document.createElement('div');
-            messageElement.classList.add('message');
-            messageElement.classList.add(sender === 'user' ? 'user-message' : 'bot-message');
-            messageElement.textContent = message;
-            chatContainer.appendChild(messageElement);
-            chatContainer.scrollTop = chatContainer.scrollHeight;
-        }
-
-        async function handleSendMessage() {
-            const messageText = chatInput.value.trim();
-            if (!messageText) return;
-
-            addMessage(messageText, 'user');
-            chatInput.value = '';
-
-            try {
-                const response = await fetch('http://localhost:5000/chat', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({ message: messageText }),
-                });
-
-                if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
-                }
-
-                const data = await response.json();
-                addMessage(data.reply, 'bot');
-
-            } catch (error) {
-                console.error('Fetch Error:', error);
-                addMessage('서버와 통신 중 오류가 발생했습니다. Python 서버가 실행 중인지 확인해주세요.', 'bot');
-            }
-        }
-
-        sendButton.addEventListener('click', handleSendMessage);
-        chatInput.addEventListener('keypress', (e) => {
-            if (e.key === 'Enter') {
-                handleSendMessage();
-            }
-        });
-    </script>
+    <footer class="footer">
+        <p>&copy; 2025 Gemini University. All Rights Reserved.</p>
+    </footer>
 
 </body>
 </html>
