--- a/03_Front/Web/HTML/05_영역관리태그.html
+++ b/03_Front/Web/HTML/05_영역관리태그.html
@@ -30,10 +30,9 @@
     <h1>영역 관련 태그</h1>
     <h2>div태그와 span태그의 차이점1 : 줄바꿈처리</h2>
 
+    <h3>div영역</h3>
     <div style="background: red;">첫번째 영역</div>
-
     <div style="background: orange;";>두번째 영역</div>
-
     <div style="background: yellow;">세번째 영역</div>
 
     <h3>span태그</h3>
