--- a/03_Front/Web/CSS/09_flex레이아웃.html
+++ b/03_Front/Web/CSS/09_flex레이아웃.html
@@ -40,7 +40,7 @@
             font-size: 24px;
             padding: 12px;
             text-align: center;
-            border: 1px solid rebeccapurple;
+            border: 1px solid red;
             width: 100px;
         }
     </style>
