--- a/03_Front/Web/화면구조잡기/02_문서구조.html
+++ b/03_Front/Web/화면구조잡기/02_문서구조.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,42 +21,31 @@
             height: 100vh;
         }
 
-        /*main content의 넓이가 1200까지만 늘어날 수 있게 가두는 영역*/
+        /* main 컨탠츠의 넓이가 1200까지만 늘어날 수 있게 가두는 영역 */
         main{
             width: 100%;
             max-width: 1200px;
             margin: 0 auto;
             height: 100vh;
-            /*overflow: scroll; 기준크기를 넘기면 스크롤을 만든다*/
+            /* overflow: scroll; 기준크기를 넘기면 스크롤을 만든다. */
         }
+        main>div{ width: 100%;}
 
-        main>div{
-            width: 100%;
-        }
+        #header{ height: 60px; display: flex; justify-content: space-between;}
 
-        #header{ 
-            height: 60px;
-            display: flex;
-            justify-content: space-between;
-        }
-        #navigator{height: 30px;}
-        #aside{
-            height: 80px;
-            display: flex;
-        }
-        #content{ 
-            min-height: calc(100% - 290px);
-            display: flex;
-        }
-        #footer{height: 120px;}
+        #navigator{ height: 30px;}
+
+        #aside{height: 80px; display: flex;}
+
+        #content{ min-height: calc(100% - 290px); display: flex;}
+
+        #fooder{height: 120px;}
 
         #header>div{text-align: center;}
-        #header> #header_1{width: 170px;}
-        #header> #header_2{
-            flex: 1;
-            max-width: 730px;
-        }
-        #header> #header_3{width: 140px;}
+
+        #header>#header_1{width: 170px;}
+        #header>#header_2{flex: 1; max-width: 730px;}
+        #header>#header_3{width: 140px;}
 
         #content_1{width: 15%;}
         #content_2{width: 65%;}
@@ -74,7 +63,9 @@
                 <div id="header_2">메뉴1 메뉴2 메뉴3</div>
                 <div id="header_3">로그인|회원가입</div>
             </div>
-            <div id="navigator"></div>
+            <div id="navigator">
+
+            </div>
             <div id="content">
                 <div id="content_1">컨텐츠1</div>
                 <div id="content_2">컨텐츠2</div>
