--- a/03_Front/Web/CSS/05_텍스트관련스타일.html
+++ b/03_Front/Web/CSS/05_텍스트관련스타일.html
@@ -28,9 +28,7 @@
 
     <h2>text-decoration</h2>
     <pre>
-        선택자{
-            text-decoration : none | underline | line-through | overline;
-        }
+        선택자{text-decoration : none | underline | line-through | overline;}
     </pre>
 
     <ul>
