--- a/03_Front/Web/CSS/05_텍스트관련스타일.html
+++ b/03_Front/Web/CSS/05_텍스트관련스타일.html
@@ -27,9 +27,7 @@
     <pre>선택자{color : 색상명 | 16진수 색상코드 | rgb(r,g,b) | rgba(r,g,b,a);}</pre>
 
     <h2>text-decoration</h2>
-    <pre>
-        선택자{text-decoration : none | underline | line-through | overline;}
-    </pre>
+    <pre>선택자{text-decoration : none | underline | line-through | overline;}</pre>
 
     <ul>
         <li style="text-decoration: underline;">텍스트 영역 아래 줄 긋기</li>
