--- a/03_Front/Web/CSS/06_영역관련스타일.html
+++ b/03_Front/Web/CSS/06_영역관련스타일.html
@@ -69,7 +69,7 @@
         #test8{
             width: 500px;
             height: 500px;
-            /* border-radius: 500px; */
+            border-radius: 250px;
             background-color: cadetblue;
             background: lavenderblush;
             background: url(../imgs/빵빵이.jfif);
