--- a/03_Front/Web/CSS/화면구조잡기/07_실습_전체화면구현_답안.html
+++ b/03_Front/Web/CSS/화면구조잡기/07_실습_전체화면구현_답안.html
@@ -15,7 +15,7 @@
 <body>
     <div id="wrapper">
         <div id="header" class="gb-1">
-            <img src="./images/logo.PNG" alt="KH로고">
+            <img src="../" alt="KH로고">
             
             <div class="search">
                 <input type="text" placeholder="검색어를 입력하세요.">
