--- a/03_Front/Web/JavaScript/06_이벤트.html
+++ b/03_Front/Web/JavaScript/06_이벤트.html
@@ -81,5 +81,32 @@
             console.log("마우스가 요소의 접근함");
         })
     </script>
+
+    <h2>이벤트가 발생한 요소객체에 접근하는 방법</h2>
+    <button id="btn6">기본 이벤트 방식</button>
+    <button id="btn7">표준 이벤트 방식</button>
+    <button onclick="test2()">인라인 이벤트 방식</button>
+
+    <script>
+        let btn6 = document.getElementById('btn6');
+
+
+        btn6.onclick = function(event){ //이벤트 핸들러
+            //이벤트 핸들러는 첫번째 매개변수로 무조건 event객체가 전달
+            console.log(event.target); //event객체에는 현재 발생한 이벤트의 정보가 전부 들어있다.
+            console.log(this);
+        }
+
+        let btn7 = document.getElementById('btn7');
+        btn7.addEventListener('click', function(event){
+            console.log(event.target);
+            console.log(this);
+        })
+
+        function test2(){
+            
+        }
+
+    </script>
 </body>
 </html>
