--- a/03_Front/Web/JavaScript/06_이벤트.html
+++ b/03_Front/Web/JavaScript/06_이벤트.html
@@ -103,8 +103,10 @@
             console.log(this);
         })
 
-        function test2(){
-            
+        function test2(ev, _this){
+            console.log(this);
+            console.log(_this);
+            console.log(ev);
         }
 
     </script>
