Class로 querySelectAll을 사용하여 모든 버튼을 반복문으로 가져오고 가져온 것을 반복문으로 이벤트 핸들러 실행

--- a/03_Front/household_account_book/index.html
+++ b/03_Front/household_account_book/index.html
@@ -22,7 +22,7 @@
             <h1>가계부</h1>
             <div class="summary">
                 <h6>현재 잔액</h6>
-                <span id="balance">0원</span>
+                <span id="balance" class="balance">0원</span>
             </div>
         </header>
 
@@ -60,7 +60,7 @@
             </div>
             <div id="balance-filed">
                 <span>잔액</span>
-                <p id="filter-balance">0원</p>
+                <p class="balance" id="filter-balance">0원</p>
             </div>
         </div>
 
