가계부 리팩토링

--- a/03_Front/household_account_book/index.html
+++ b/03_Front/household_account_book/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <!-- **요약 영역: 총 수입, 총 지출, 현재 잔액 표시** -->
-        <div class="filter-filed-container" id="filter-filed-container">
+        <div class="summary-container" id="summary-container">
             <div id="all-income-filed">
                 <span>총 수입</span>
                 <p id="filter-income">0원</p>
