모든 색상변경을 class를 추가하여 변환

--- a/03_Front/household_account_book/index.html
+++ b/03_Front/household_account_book/index.html
@@ -52,15 +52,15 @@
         <div class="summary-container" id="summary-container">
             <div id="all-income-filed">
                 <span>총 수입</span>
-                <p id="filter-income">0원</p>
+                <p class="total" id="income-total">0원</p>
             </div>
             <div id="all-expense-filed">
                 <span>총 지출</span>
-                <p id="filter-expense">0원</p>
+                <p class="total" id="expense-total">0원</p>
             </div>
             <div id="balance-filed">
                 <span>잔액</span>
-                <p class="balance" id="filter-balance">0원</p>
+                <p class="balance" id="balance-total">0원</p>
             </div>
         </div>
 
