선택자 클래스 수정

--- a/03_Front/household_account_book/index.html
+++ b/03_Front/household_account_book/index.html
@@ -32,7 +32,7 @@
             <input id="amount-input" type="number" placeholder="금액을 입력하세요">
         </div>
 
-        <div class="income-Expense-container">
+        <div class="income-expense-container">
             <button id="income-btn" data-type="income">수입</button>
             <button id="expense-btn" data-type="expense">지출</button>
         </div>
@@ -50,15 +50,15 @@
 
         <!-- **요약 영역: 총 수입, 총 지출, 현재 잔액 표시** -->
         <div class="summary-container" id="summary-container">
-            <div id="all-income-filed">
+            <div id="all-income-field">
                 <span>총 수입</span>
                 <p class="total" id="income-total">0원</p>
             </div>
-            <div id="all-expense-filed">
+            <div id="all-expense-field">
                 <span>총 지출</span>
                 <p class="total" id="expense-total">0원</p>
             </div>
-            <div id="balance-filed">
+            <div id="balance-field">
                 <span>잔액</span>
                 <p class="balance" id="balance-total">0원</p>
             </div>
